--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Los Guanacos Hunting Ranch</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/guanacos/favicon-32x32.png">
 
     <!-- Core Stylesheet -->
     <link rel="stylesheet" href="style.css">
